--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.17.3",
     "lucide-react": "^0.513.0",
     "motion": "^12.17.3",
@@ -33,11 +34,13 @@
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0",
     "zod": "^3.25.56"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
