--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@tabler/icons-react": "^3.34.0",
     "@types/bcrypt": "^5.0.2",
     "archiver": "^7.0.1",
     "bcrypt": "^6.0.0",
@@ -29,6 +30,7 @@
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.6",
+    "peerjs": "^1.5.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
