--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.17.3",
     "lucide-react": "^0.513.0",
     "motion": "^12.17.3",
@@ -37,6 +38,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
     "zod": "^3.25.56"
