--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tabler/icons-react": "^3.34.0",
     "@types/bcrypt": "^5.0.2",
+    "@uploadthing/react": "^7.3.2",
     "archiver": "^7.0.1",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
@@ -43,6 +44,7 @@
     "react-icons": "^5.5.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
+    "uploadthing": "^7.7.3",
     "uuid": "^11.1.0",
     "zod": "^3.25.56"
   },
